文档撰写中......

--- a/专业术语.md
+++ b/专业术语.md
@@ -14,3 +14,7 @@ adj. 一般的、普通的
 考虑到
 # [incremental](https://cn.bing.com/dict/search?q=incremental+&qs=n&form=Z9LH5&sp=-1&pq=incremental+&sc=7-12&sk=&cvid=DF131356080D4A9BB2A4D22C2DB077CF)  [.ɪŋkrə'ment(ə)l]
 adj. 增加的
+# [trivial](https://cn.bing.com/dict/search?q=trivial+&qs=n&form=Z9LH5&sp=-1&pq=trivial+&sc=6-8&sk=&cvid=E098BB34F2D248789989EC9137B214C1) ['trɪviəl]
+不重要的；微不足道的
+# Continuous Integration
+持续集成
