--- a/随记.md
+++ b/随记.md
@@ -11,3 +11,9 @@ ARMv7系列架构定义了三大系列：
 # while（1）和for（；；）的区别？
 两者都是实现死循环的方式，但是大部分情况使用for（；；），这是因为从汇编的角度来看，前者的代码更长，执行的时间要长一些。
 ![for和while的汇编代码](img/for_while.jpg)
+# 常用的配置文件格式
+
+* **ini文件**: 这个在windows下用的比较多,只支持一层参数，太复杂的项目就不适用了。
+* **xml文件**：上古时代就开始用了，每个标签可以自定认，但是格式很复杂，容易搞混。
+* **json文件**：现在前后端交互的行业标准，搞互联网的没有人不认识，但有个头痛的地方就是不能注释（可以写一个不用的字段把注释内容写进去，但不建议）。
+* **yaml文件**：比较新的一种配置文件格式，通俗易懂。但也有个头痛的地方，就是对齐和空格要注意雨露均沾，这个有点像Python的语法（Python开发者要随身带一把游标卡尺）。
