--- a/专业术语.md
+++ b/专业术语.md
@@ -20,3 +20,5 @@ adj. 增加的
 持续集成
 # [iterative](https://cn.bing.com/dict/search?q=iterative+&qs=n&form=Z9LH5&sp=-1&pq=iterative+&sc=8-10&sk=&cvid=6F2DA6BED1F44E7AA3BBF58C1D25C06A) ['ɪtərətɪv]
 重复的；迭代的
+# [sandcastle](https://cn.bing.com/dict/search?q=sandcastle&FORM=HDRSC7) ['sæn(d).kæs(ə)l]
+沙堡、沙塔
