--- a/专业术语.md
+++ b/专业术语.md
@@ -22,3 +22,5 @@ adj. 增加的
 重复的；迭代的
 # [sandcastle](https://cn.bing.com/dict/search?q=sandcastle&FORM=HDRSC7) ['sæn(d).kæs(ə)l]
 沙堡、沙塔
+# rake
+v. 耙、梳理、扫视
