--- a/专业术语.md
+++ b/专业术语.md
@@ -24,3 +24,5 @@ adj. 增加的
 沙堡、沙塔
 # rake
 v. 耙、梳理、扫视
+# [antitrust](https://cn.bing.com/dict/search?q=Antitrust&FORM=HDRSC7) [ˌæntiˈtrʌst]
+adj. 反垄断
