--- a/随记.md
+++ b/随记.md
@@ -7,7 +7,7 @@ ARMv7系列架构定义了三大系列：
 * "R系列"。针对RTOS。
 * "M系列"。微控制器。
 # git clone --recursive "resporitory url"
-![git clone failed](img/git_clone_failed.jpg)
+<img src="img/git_clone_failed.jpg" width = 400 height = 300>
 # while（1）和for（；；）的区别？
 两者都是实现死循环的方式，但是大部分情况使用for（；；），这是因为从汇编的角度来看，前者的代码更长，执行的时间要长一些。
 ![for和while的汇编代码](img/for_while.jpg)
@@ -17,5 +17,9 @@ ARMv7系列架构定义了三大系列：
 * **xml文件**：上古时代就开始用了，每个标签可以自定认，但是格式很复杂，容易搞混。
 * **json文件**：现在前后端交互的行业标准，搞互联网的没有人不认识，但有个头痛的地方就是不能注释（可以写一个不用的字段把注释内容写进去，但不建议）。
 * **yaml文件**：比较新的一种配置文件格式，通俗易懂。但也有个头痛的地方，就是对齐和空格要注意雨露均沾，这个有点像Python的语法（Python开发者要随身带一把游标卡尺）。
+# .NET Framework
+.NET Framework是用于Windows的新托管代码编程模型。
+其实顾名思义FrameWork，就已经说明可他最最核心的含义，就是一套框架，是微软公司提供的一套支持C++，C，C#等等多种语音的开发框架。有点类似于JDK之类的。   
+综上所述，.Net FrameWork就是微软提供的一整套支持C系列各种语言的API和各种丰富的资源框架。可以帮助开发者快速便捷轻松的开发出复杂度较高的高级程序和网页
 
 
