--- a/随记.md
+++ b/随记.md
@@ -23,5 +23,7 @@ ARMv7系列架构定义了三大系列：
 .NET Framework是用于Windows的新托管代码编程模型。
 其实顾名思义FrameWork，就已经说明可他最最核心的含义，就是一套框架，是微软公司提供的一套支持C++，C，C#等等多种语音的开发框架。有点类似于JDK之类的。   
 综上所述，.Net FrameWork就是微软提供的一整套支持C系列各种语言的API和各种丰富的资源框架。可以帮助开发者快速便捷轻松的开发出复杂度较高的高级程序和网页
+# .gitkeep
+在使用Git的时候如果文件夹是空的则不会被git add，因此有时为了git add成功空文件夹，我们可以在文件夹下放一个.gitkeeper文件。
 
 
