--- a/随记.md
+++ b/随记.md
@@ -24,4 +24,20 @@ ARMv7系列架构定义了三大系列：
 其实顾名思义FrameWork，就已经说明可他最最核心的含义，就是一套框架，是微软公司提供的一套支持C++，C，C#等等多种语音的开发框架。有点类似于JDK之类的。   
 综上所述，.Net FrameWork就是微软提供的一整套支持C系列各种语言的API和各种丰富的资源框架。可以帮助开发者快速便捷轻松的开发出复杂度较高的高级程序和网页
 
+# 状态机VS自动机
 
+FSM（finite state machine）
+
+FAM（finite automata machine）
+
+DFA（determinate finite automata）
+
+NFA（Non-determinate finite automata）
+
+自动机：自动机是有限状态机（FSM）的数学模型
+
+状态机：我们现在所说的状态机一般是有限状态机（FSM）的简称
+
+有限自动机：有限自动机是计算机科学的重要基石，在软件开发领域内通常被称作为有限状态机，是一种应用非常广泛的设计模式。
+
+有限状态机：
