feat:continously update

--- a/专业术语.md
+++ b/专业术语.md
@@ -1,32 +1,60 @@
-# scalar ['skeɪlər]
+# 1. scalar ['skeɪlər]
 标量、纯量。（浮点、整型、布尔等）
-# leverage  ['lev(ə)rɪdʒ]
+# 2. leverage  ['lev(ə)rɪdʒ]
 杠杆作用、势力、影响
-# agile [ˈæˌdʒəl]
+# 3. agile [ˈæˌdʒəl]
 adj. 敏捷的、灵活的
-# generic [dʒə'nerɪk]
+# 4. generic [dʒə'nerɪk]
 adj. 一般的、普通的
-# Prior Art
+# 5. Prior Art
 先进技术
-# syntax ['sɪn.tæks]
+# 6. syntax ['sɪn.tæks]
 语法
-# allows for
+# 7. allows for
 考虑到
-# [incremental](https://cn.bing.com/dict/search?q=incremental+&qs=n&form=Z9LH5&sp=-1&pq=incremental+&sc=7-12&sk=&cvid=DF131356080D4A9BB2A4D22C2DB077CF)  [.ɪŋkrə'ment(ə)l]
+# 8. [incremental](https://cn.bing.com/dict/search?q=incremental+&qs=n&form=Z9LH5&sp=-1&pq=incremental+&sc=7-12&sk=&cvid=DF131356080D4A9BB2A4D22C2DB077CF)  [.ɪŋkrə'ment(ə)l]
 adj. 增加的
-# [trivial](https://cn.bing.com/dict/search?q=trivial+&qs=n&form=Z9LH5&sp=-1&pq=trivial+&sc=6-8&sk=&cvid=E098BB34F2D248789989EC9137B214C1) ['trɪviəl]
+# 9. [trivial](https://cn.bing.com/dict/search?q=trivial+&qs=n&form=Z9LH5&sp=-1&pq=trivial+&sc=6-8&sk=&cvid=E098BB34F2D248789989EC9137B214C1) ['trɪviəl]
 不重要的；微不足道的
-# Continuous Integration
+# 10. Continuous Integration
 持续集成
-# [iterative](https://cn.bing.com/dict/search?q=iterative+&qs=n&form=Z9LH5&sp=-1&pq=iterative+&sc=8-10&sk=&cvid=6F2DA6BED1F44E7AA3BBF58C1D25C06A) ['ɪtərətɪv]
+# 11. [iterative](https://cn.bing.com/dict/search?q=iterative+&qs=n&form=Z9LH5&sp=-1&pq=iterative+&sc=8-10&sk=&cvid=6F2DA6BED1F44E7AA3BBF58C1D25C06A) ['ɪtərətɪv]
 重复的；迭代的
-# [sandcastle](https://cn.bing.com/dict/search?q=sandcastle&FORM=HDRSC7) ['sæn(d).kæs(ə)l]
+# 12. [sandcastle](https://cn.bing.com/dict/search?q=sandcastle&FORM=HDRSC7) ['sæn(d).kæs(ə)l]
 沙堡、沙塔
-# rake
+# 14. rake
 v. 耙、梳理、扫视
-# [antitrust](https://cn.bing.com/dict/search?q=Antitrust&FORM=HDRSC7) [ˌæntiˈtrʌst]
+# 15. [antitrust](https://cn.bing.com/dict/search?q=Antitrust&FORM=HDRSC7) [ˌæntiˈtrʌst]
 adj. 反垄断
-# hybrid
+# 16. hybrid
 adj. 杂种的，混合的
-# standalone
+# 17. standalone
 独立的
+
+## 18. card
+
+梳理
+
+## 19. failsafe
+
+保险的
+
+## 20. mandatory
+
+强制的、义务的、法定的
+
+## 21. [concatenation](https://cn.bing.com/dict/search?q=+concatenation+&qs=n&form=Z9LH5&sp=-1&pq=concatenation+&sc=8-14&sk=&cvid=72A2525C57144A4CB8F02BA73E0BFA19)
+
+一系列相关联的事务、串联、连接
+
+## 22. hydronic
+
+水暖加热器、循环加热的
+
+## 23. prevent
+
+预防、阻止
+
+## 24. HVAC
+
+HVAC（Heating、Ventilation and Air conditioning），供热通风与空气调节。
