--- a/随记.md
+++ b/随记.md
@@ -71,5 +71,24 @@ Linux下常用的程序调试器。
 
 1. <font color=red>MCU不同于MPU。MPU可以看成是一个增强版的CPU，而MCU则是CPU+RAM+ROM+一些简单的外围器件。MCU就是单片机了，只要组成最小系统就可以跑代码了，而MPU则不能。</font>
 
+## 13. ISP、JTAG、SWD、SWIM
 
+1. **JTAG方式**。
 
+   ​		JTAG是一种标准的测试协议，可以实现编程的在线调试，利用单步追踪可以方便的查找代码的BUG，大多数的单片机都支持这种接口。
+
+2. **SWD接口烧录方式。**
+
+   ​		SWD是一种串行调试接口，与JTAG相比，SWD只需要两根线。
+
+3. **ISP烧写方式。**
+
+   ​		使用单片机的UART实现烧录。
+
+4. **SWIM单总线下载方式。**
+
+   ​		这种方式是针对STM8系列的单片机的，这种方式只需要一根线即可实现程序的下载。
+
+**注：**
+
+​		大多数单片机的JTAG和SWD接口是复用的。
